thank you message fix on mobile and some naming correction on page

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -377,4 +377,62 @@
     margin-bottom: 0 !important;
     font-size: 12px !important;
   }
+
+  /**subscription **/
+  .subscriptionSuccess,
+  .contactSuccess {
+    width: 50%;
+    height: 40%;
+    position: fixed;
+    left: 30%;
+    top: 40%;
+    z-index: 9999;
+    background: #fff;
+    display: none;
+    border: 1px solid #000;
+    margin-top: 20px;
+    border-radius: 2px;
+  }
+
+  .subsNotice,
+  .consNotice {
+    width: 100%;
+    height: 200px;
+    background: none;
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    top: 0px;
+    bottom: 0px;
+    margin: auto;
+    border-radius: 5px 5px 0 0;
+    text-align: center;
+  }
+  .subsNotice i,
+  .consNotice i {
+    border-radius: 20%;
+    background-color: rgb(240, 240, 11);
+    color: #000;
+    font-size: 40px;
+
+    text-align: center;
+    height: 40px;
+    width: 45px;
+    /*padding: 10px 0;*/
+  }
+  .subsNotice p,
+  .consNotice p {
+    color: #000;
+    font-family: "Merriweather", serif;
+    font-size: 12px;
+    margin-top: 20px;
+    text-transform: initial;
+    line-height: 20px;
+    display: inline-block;
+    font-weight: bold;
+  }
+
+  .close {
+    font-size: 20px;
+  }
 }
