--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@
   display: block;
   text-transform: uppercase;
   line-height: 0.8;
-  font-family: "Montserrat", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 15px;
 }
 .mainNav ul li.active a {
@@ -127,7 +127,7 @@
   /*font-family: "Merriweather", serif;*/
 
   color: #fff;
-  font-size: 36px;
+  font-size: 34px;
   margin-bottom: 30px;
   text-transform: capitalize;
   /*font-style: italic;*/
@@ -136,19 +136,19 @@
 .bannerCont h2 {
   /*font-family: "Merriweather", serif;*/
   color: #fff;
-  font-size: 26px;
+  font-size: 24px;
   margin-bottom: 30px;
   text-transform: capitalize;
   /*font-style: italic;*/
 }
 
 .btn-banner {
-  font-size: 18px;
-  line-height: 16px;
+  font-size: 17px;
+  line-height: 17px;
 
   color: rgb(8, 8, 8);
   border: 1px solid transparent;
-  padding: 15px 35px;
+  padding: 13px 30px;
   margin: 0;
   display: inline-block;
   border-radius: 3px;
@@ -160,7 +160,7 @@
 }
 
 .bannerCont p {
-  font-size: 25px;
+  font-size: 23px;
   line-height: 0.8;
   color: #fff;
   /*font-family: "Merriweather", serif;*/
@@ -300,7 +300,7 @@
   text-transform: uppercase;
   width: 100%;
   margin: auto;
-  margin-top: 30px;
+  margin-top: 10px;
   border-radius: 4px;
   -webkit-transition: all 500ms ease;
   -moz-transition: all 500ms ease;
@@ -370,6 +370,10 @@
 .btn-subscribe,
 .btn-banner {
   background: #dcc312;
+}
+
+.btn-subscribe {
+  padding: 10px 20px;
 }
 
 .btn-subscribe:hover {
@@ -753,11 +757,11 @@
 /**subscription **/
 .subscriptionSuccess,
 .contactSuccess {
-  width: 45%;
-  height: 50%;
+  width: 38%;
+  height: 38%;
   position: fixed;
-  left: 25%;
-  top: 25%;
+  left: 31%;
+  top: 31%;
   z-index: 9999;
   background: #fff;
   display: none;
@@ -782,24 +786,26 @@
 }
 .subsNotice i,
 .consNotice i {
-  border-radius: 60%;
+  border-radius: 20%;
   background-color: rgb(240, 240, 11);
   color: #000;
-  font-size: 100px;
-  height: 130px;
+  font-size: 80px;
+
   text-align: center;
-  width: 130px;
-  padding: 20px 0;
+  height: 80px;
+  width: 90px;
+  /*padding: 10px 0;*/
 }
 .subsNotice p,
 .consNotice p {
   color: #000;
   font-family: "Merriweather", serif;
-  font-size: 20px;
-  margin: 20px;
+  font-size: 18px;
+  margin-top: 60px;
   text-transform: initial;
-  line-height: 40px;
+  line-height: 30px;
   display: inline-block;
+  font-weight: bold;
 }
 /**preloader**/
 .preloader {
